--- a/src/components/HeroBracket/HeroCard.css
+++ b/src/components/HeroBracket/HeroCard.css
@@ -1,17 +1,26 @@
 .grid-container{
     border: 1px solid black;
-    margin: 10px;
+    margin-top: 100px;
     width:  300px;
     padding: 10px;
+    text-align: center;
+}
+
+.grid-container:hover{
+    box-shadow: 3px 5px 3px 3px rgba(5, 5, 5, 0.226);
 }
 
 .grid-container li{
     list-style: none;
 }
+
 .grid-container ul{
     padding:0;
 }
 
-.grid-container * {
-    text-align: center;
+img{
+    border-radius: 10px;
+    display: inline-block;
+    width: 120px;
+    height: 120px;
 }
