--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,6 @@
 .container-main {
     text-align: center;
+    height: 100vh;
 }
 
 .container-main h1{
@@ -22,4 +23,35 @@
 .main-para{
     margin: 50px 200px;
     font-size: 25px;
+}
+
+.nav-container{
+    display:flex;
+    justify-content: space-around;
+}
+
+
+
+
+.nav-container_link {
+	background:linear-gradient(to bottom, #181a19 5%, #e02a48 100%);
+	background-color:#181a19;
+	border-radius:28px;
+	border:1px solid #ffffff;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	padding: 16px 31px;
+	text-decoration: none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.nav-container_link:hover {
+	background:linear-gradient(to bottom, #e02a48 5%, #181a19 100%);
+	background-color:#e02a48;
+}
+.nav-container_link:active {
+	position:relative;
+	top:1px;
 }
