--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,6 @@
 .container-main {
     text-align: center;
-    height: 100vh;
+    height: 110vh;
 }
 
 .container-main h1{
@@ -28,13 +28,12 @@
 .nav-container{
     display:flex;
     justify-content: space-around;
+	margin-top: 100px;
 }
 
 
-
-
 .nav-container_link {
-	background:linear-gradient(to bottom, #181a19 5%, #e02a48 100%);
+	background:linear-gradient(to bottom, #191b1a 10%, #e02a48 100%);
 	background-color:#181a19;
 	border-radius:28px;
 	border:1px solid #ffffff;
@@ -42,7 +41,7 @@
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
-	font-size:20px;
+	font-size: 27px;
 	padding: 16px 31px;
 	text-decoration: none;
 	text-shadow:0px 1px 0px #ffffff;
@@ -50,6 +49,7 @@
 .nav-container_link:hover {
 	background:linear-gradient(to bottom, #e02a48 5%, #181a19 100%);
 	background-color:#e02a48;
+	color:White;
 }
 .nav-container_link:active {
 	position:relative;
