Change to herocard css file was made as well as for the footer component

--- a/src/components/HeroBracket/HeroCard.css
+++ b/src/components/HeroBracket/HeroCard.css
@@ -24,3 +24,12 @@ img{
     width: 300px;
     height: 320px;
 }
+
+.stats-container{
+    display: inline-block;
+}
+
+.stats-icon{
+    margin-right: 10px;
+}
+
