Add search field for the heroes
A search field for the heroes section of the site was added. The image
elements were both provided with a separate class for better selection
handling.

The implementation was needed for better UX.`

--- a/src/components/HeroBracket/HeroCard.css
+++ b/src/components/HeroBracket/HeroCard.css
@@ -18,11 +18,17 @@
     padding:0;
 }
 
-img{
+.hero-image{
     border-radius: 10px;
     display: inline-block;
     width: 300px;
     height: 320px;
+}
+
+.house-banner{
+    width: 150px;
+    height: 150px;
+    margin-bottom: 20px;
 }
 
 .stats-container{
