Modified pagination functionality
Pagination functionality has been fixed. Anchor elements have been
replaced with a Link react elemenets and the routing has been set to the
/heroes path.

Change was needed due to previous malfunctionality.

--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -1,8 +1,9 @@
 .pagination-container{
+    display: inline-block;
     text-align: center;
 }
 
 .pagination{
-    display: flex;
-    align-items: center;
+    display: inline-block;
+    text-align: center;
 }
