Add a image and description section int he HeroB
Added an image, paragraph and headers elements to the HeroBracket
component.

Implementation was needed for basic UI purposes.

--- a/src/components/HeroBracket/HeroBracket.css
+++ b/src/components/HeroBracket/HeroBracket.css
@@ -5,3 +5,13 @@
 .hero-bracket h1, h2 {
     margin-top: 20px;
 }
+
+.hero-bracket-img{
+    width: 500px;
+    height: 600px;
+    border-radius: 10px;
+}
+
+.hero-bracket-desc{
+    margin-top:100px;
+}
